# varnish-hive

./: AUTHORS  CONTRIBUTING  ChangeLog  LICENSE  README.md  autogen.sh  config.h.in  configure.ac  description-pak
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  files  install  package.default  package.init  postinst  postrm  varnish-hive.postinst.debhelper  varnish-hive.prerm.debhelper  varnish-hive.service
debian/varnish-hive/DEBIAN/: control  md5sums  preinst  prerm
debian/varnish-hive/etc/default/: varnish-hive
etc/init.d/: varnish-hive
etc/varnish/: varnishhive.ini  varnishhive.vcl
src/: Makefile.am  dictionary.c  dictionary.h  iniparser.c  iniparser.h  varnishhive.c  varnishhive_log.c  varnishhive_log.h  varnishhive_network.c  varnishhive_network.h  varnishhive_options.c  varnishhive_options.h  varnishhive_parser.c  varnishhive_parser.h
utils/: clean.sh  create_user.sh  deb_packager.sh
utils/test_backend/: app.py
